<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/count"
            android:inputType="number|numberSigned|numberDecimal" />

        <TextView
            android:id="@+id/rmb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/init"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/dollar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dollar" />

        <Button
            android:id="@+id/euro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/euro" />

        <Button
            android:id="@+id/won"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/won" />

        <Button
            android:id="@+id/config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>