<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/height"
            android:inputType="number|numberSigned|numberDecimal"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="34dp" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/weight"
            android:inputType="number|numberSigned|numberDecimal"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="89dp" />

        <Button
            android:id="@+id/caculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caculater"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="157dp"
            tools:text="@string/caculater" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Zero"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>